@@ -4,10 +4,6 @@
   :dependencies
   [[com.microsoft.sqlserver/mssql-jdbc "7.0.0.jre8"]]
 
-  :jvm-opts
-  ["-XX:+IgnoreUnrecognizedVMOptions"
-   "--add-modules=java.xml.bind"]
-
   :profiles
   {:provided
    {:dependencies [[metabase-core "1.0.0-SNAPSHOT"]]}
